--- a/src/app/shared/styles/_layout.scss
+++ b/src/app/shared/styles/_layout.scss
@@ -23,7 +23,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: rgba(0, 0, 0, 0.6);
     }
 
     h1 {
@@ -34,6 +34,7 @@
       text-transform: uppercase;
       letter-spacing: 2px;
       margin: 0;
+      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
     }
   }
 
